Delete README text desribing older warnings